--- a/main.css
+++ b/main.css
@@ -1,221 +1,273 @@
-html, body {
-    margin: 0;
-    font-family: sans-serif;
-    font-size: 20px;
+html,
+body {
+  margin: 0;
+  font-family: sans-serif;
+  font-size: 20px;
 }
 
 .vertical-scroll-wrap {
-    height: 15000px;
-    width: 100%;
-    display: inline-block;
+  height: 15000px;
+  width: 100%;
+  display: inline-block;
 }
 
 .vertical-scroll-wrap__inner {
-    position: fixed;
-    width: 100%;
+  position: fixed;
+  width: 100%;
 }
 
 .main-text {
-    margin: 40px auto;
-    max-width: 650px;
-    line-height: 1.7;
-    padding: 0 10px;
+  margin: 40px auto;
+  max-width: 650px;
+  line-height: 1.7;
+  padding: 0 10px;
 }
 
 @media (prefers-color-scheme: light) {
-    body {
-        background-color: white;
-        color: #444;
-    }
-    a:link { color: #444; }
-    a:visited { color: #444; }
-    a:hover { animation: warpcolor 15s infinite; }
-    a:active { color: #444; }
+  body {
+    background-color: white;
+    color: #444;
+  }
+  a:link {
+    color: #444;
+  }
+  a:visited {
+    color: #444;
+  }
+  a:hover {
+    animation: warpcolor 15s infinite;
+  }
+  a:active {
+    color: #444;
+  }
 }
 
 /* dark mode */
 @media (prefers-color-scheme: dark) {
-    body {
-        background-color: black;
-        color: #EEE;
-    }
-    a:link { color: #EEE; }
-    a:visited { color: #EEE; }
-    a:hover { animation: warpcolor 15s infinite; }
-    a:active { color: #EEE; }
+  body {
+    background-color: black;
+    color: #eee;
+  }
+  a:link {
+    color: #eee;
+  }
+  a:visited {
+    color: #eee;
+  }
+  a:hover {
+    animation: warpcolor 15s infinite;
+  }
+  a:active {
+    color: #eee;
+  }
 }
 
-h1, h2, h3 {
+h1,
+h2,
+h3 {
   line-height: 1.2;
 }
 
 .logo {
-    padding: 100px 0;
-    color: white !important;
-    text-shadow:
-   -1px -1px 0 #000,
-    1px -1px 0 #000,
-    -1px 1px 0 #000,
-     1px 1px 0 #000;
-    text-align: center;
+  padding: 100px 0;
+  color: white !important;
+  text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000,
+    1px 1px 0 #000;
+  text-align: center;
 
-    background-color: #921AFF;
-    clip-path: polygon(0% 0%, 55% 0%, 100% 0%, 100% 51%, 100% 100%, 54% 100%, 0% 100%, 0% 46%);
+  background-color: #921aff;
+  clip-path: polygon(
+    0% 0%,
+    55% 0%,
+    100% 0%,
+    100% 51%,
+    100% 100%,
+    54% 100%,
+    0% 100%,
+    0% 46%
+  );
 
-    animation: warp 15s infinite;
-    animation-timing-function: ease-in-out;
+  animation: warp 15s infinite;
+  animation-timing-function: ease-in-out;
 }
 @keyframes warp {
-    0% {
-      background-color: #921AFF;
-      }
-    25% {
-  clip-path: polygon(35% 37%, 54% 18%, 70% 39%, 84% 57%, 69% 70%, 50% 86%, 31% 71%, 16% 56%);
-      background-color: #FF2D47;
-    }
-      50% {
-  clip-path: polygon(24% 26%, 64% 18%, 95% 31%, 90% 50%, 84% 69%, 64% 78%, 44% 87%, 16% 67%);
-      background-color: #F5D349;
-    }
-      75% {
-  clip-path: polygon(45% 46%, 51% 38%, 65% 45%, 73% 52%, 65% 58%, 57% 65%, 54% 53%, 48% 54%);
-      background-color: #34D865;
-    }
-     100% {
-      background-color: #921AFF;
-    }
+  0% {
+    background-color: #921aff;
+  }
+  25% {
+    clip-path: polygon(
+      35% 37%,
+      54% 18%,
+      70% 39%,
+      84% 57%,
+      69% 70%,
+      50% 86%,
+      31% 71%,
+      16% 56%
+    );
+    background-color: #ff2d47;
+  }
+  50% {
+    clip-path: polygon(
+      24% 26%,
+      64% 18%,
+      95% 31%,
+      90% 50%,
+      84% 69%,
+      64% 78%,
+      44% 87%,
+      16% 67%
+    );
+    background-color: #f5d349;
+  }
+  75% {
+    clip-path: polygon(
+      45% 46%,
+      51% 38%,
+      65% 45%,
+      73% 52%,
+      65% 58%,
+      57% 65%,
+      54% 53%,
+      48% 54%
+    );
+    background-color: #34d865;
+  }
+  100% {
+    background-color: #921aff;
+  }
 }
 @keyframes warpcolor {
-    0% {
-      color: #921AFF;
-      }
-    25% {
-      color: #FF2D47;
-    }
-      50% {
-      color: #F5D349;
-    }
-      75% {
-      color: #34D865;
-    }
-     100% {
-      color: #921AFF;
-    }
+  0% {
+    color: #921aff;
+  }
+  25% {
+    color: #ff2d47;
+  }
+  50% {
+    color: #f5d349;
+  }
+  75% {
+    color: #34d865;
+  }
+  100% {
+    color: #921aff;
+  }
 }
 
 .category-tag {
-    text-shadow:
-   -1px -1px 0 #000,
-    1px -1px 0 #000,
-    -1px 1px 0 #000,
-     1px 1px 0 #000;
-    color: white;
-    border: 2px solid white;
-    padding: 8px 12px;
+  text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000,
+    1px 1px 0 #000;
+  color: white;
+  border: 2px solid white;
+  padding: 8px 12px;
 }
 
 .header {
-    margin-top: 40px;
-    letter-spacing: 4px;
-    animation: warpcolor 15s infinite;
-    animation-timing-function: ease-in-out;
+  margin-top: 40px;
+  letter-spacing: 4px;
+  animation: warpcolor 15s infinite;
+  animation-timing-function: ease-in-out;
 }
 
 .horizontal-scroll-wrap {
-    position: relative;
-    display: inline-flex;
-    height: calc(100vh - 100px);
+  position: relative;
+  display: inline-flex;
+  height: calc(100vh - 100px);
 
-    padding: 0 150px;
+  padding: 0 150px;
 }
 
 .project-section {
-    float: left;
-    padding: 0 150px;
-    position: relative;
-    height: 90%;
-    white-space: nowrap;
+  float: left;
+  padding: 0 150px;
+  position: relative;
+  height: 90%;
+  white-space: nowrap;
+  border: 2px solid black;
+  border-right: none;
 }
 
 .project-section a:link {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 .project-section p {
-    width: 490px;
-    line-height: 25px;
-    max-width: 90vw;
-    white-space: normal;
+  width: 490px;
+  line-height: 25px;
+  max-width: 90vw;
+  white-space: normal;
 }
 
 .to-top-wrap {
-    position: relative;
-    top: 50%;
-    transform: translateY(-50%);
+  position: relative;
+  top: 50%;
+  transform: translateY(-50%);
 }
 
-@media  (max-width: 800px) {
-    .horizontal-scroll-wrap {
-        padding: 20px 10px 20px;
-        height: 48vh;
-        display: block;
-    }
-    .project-section {
-        padding: 0px 0px 80px 0px;
-        display: block;
-        overflow-x: scroll;
-        height: auto;
-    }
-
-    .project-section img, .project-section video {
-        height: auto !important;
-        max-width: 80% !important;
-        margin: 3px 0;
-        float: left;
-    }
-
-    content {
-        height: auto !important;
-    }
-
-    .project-section p {
-        font-size: 20px;
-        float: left;
-        line-height: 20px;
-    }
-
-    .project-section h3 {
-        max-width: 90vw;
-        white-space: normal;
-        line-height: 35px;
-    }
-
-    .vertical-scroll-wrap {
-        height: auto;
-    }
-    .vertical-scroll-wrap__inner {
-        position: relative;
-    }
-    .main-text {
-        margin: 10px;
-    }
-    .to-top-wrap {
-        position: relative;
-        top: autp;
-        transform: none;
-    }
+@media (max-width: 800px) {
+  .horizontal-scroll-wrap {
+    padding: 20px 10px 20px;
+    height: 48vh;
+    display: block;
+  }
+  .project-section {
+    padding: 0px 0px 80px 0px;
+    display: block;
+    overflow-x: scroll;
+    height: auto;
+    border-left: none;
   }
 
-button {
-    border: 2px solid currentColor;
-    padding: 1rem 2rem;
-    background: transparent;
-    margin: 0;
-    color: currentColor;
-    cursor: pointer;
-    font-weight: bold;
+  .project-section img,
+  .project-section video {
+    height: auto !important;
+    max-width: 80% !important;
+    margin: 3px 0;
+    float: left;
+  }
 
+  content {
+    height: auto !important;
+  }
+
+  .project-section p {
+    font-size: 20px;
+    float: left;
+    line-height: 20px;
+  }
+
+  .project-section h3 {
+    max-width: 90vw;
+    white-space: normal;
+    line-height: 35px;
+  }
+
+  .vertical-scroll-wrap {
+    height: auto;
+  }
+  .vertical-scroll-wrap__inner {
+    position: relative;
+  }
+  .main-text {
+    margin: 10px;
+  }
+  .to-top-wrap {
+    position: relative;
+    top: autp;
+    transform: none;
+  }
+}
+
+button {
+  border: 2px solid currentColor;
+  padding: 1rem 2rem;
+  background: transparent;
+  margin: 0;
+  color: currentColor;
+  cursor: pointer;
+  font-weight: bold;
 }
 button:hover {
-    animation: warpcolor 15s infinite;
+  animation: warpcolor 15s infinite;
 }
